src/test/deca/context/valid/objet/protected.deca
// Description:
//    Déclare une méthode ???
//
// Resultats:
//    //
//
// Historique:
//    cree le 14/01/2023

class A{
    protected int x;
}

class B extends A {
    void getx(){
        x; // TODO: Bug ici a fix
    }
}