src/test/deca/context/invalid/override-method-wrong-type.deca
// Description:
//    override de méthode avec un type de retour différent et non compatible
//
// Resultats:
//    Ligne 15: The return type is not the same as defined in the superclass (or not a subtype) (rule 2.7)
//
// Historique:
//    cree le 16/01/2023

class A {
    float get(){}
}

class B extends A {
    void get(){}
}
